src/tests/fixtures/field_definitions/MethodFieldMissingType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  /** @gqlField */
  someMethodField() {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/MethodFieldMissingType.invalid.ts:4:3 - error: Expected GraphQL field to have a type.

4   someMethodField() {
    ~~~~~~~~~~~~~~~
